--- a/src/main/resources/fxml/FichierInfo.fxml
+++ b/src/main/resources/fxml/FichierInfo.fxml
@@ -20,7 +20,7 @@
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
          <top>
-            <Label styleClass="titre" text="Informations sur la sauvegarde" BorderPane.alignment="CENTER" />
+            <Label styleClass="lTitre" text="Informations sur la sauvegarde" BorderPane.alignment="CENTER" />
          </top>
          <bottom>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -43,17 +43,17 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label styleClass="lEmphase" text="Niveau d'encryption" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Label styleClass="lBold" text="Niveau d'encryption" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <padding>
                         <Insets top="4.0" />
                      </padding></Label>
                   <ComboBox fx:id="cbEncryptionLevel" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <Label styleClass="lEmphase" text="Mot de passe" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                  <Label styleClass="lBold" text="Mot de passe" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="TOP">
                      <padding>
                         <Insets top="4.0" />
                      </padding></Label>
                   <TextField fx:id="tfMotDePasse" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-                  <Label styleClass="lEmphase" text="Autorisé" GridPane.halignment="RIGHT" />
+                  <Label styleClass="lBold" text="Autorisé" GridPane.halignment="RIGHT" />
                   <Label fx:id="lAutorise" text="Oui/Non" GridPane.columnIndex="1" />
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <children>
