--- a/src/main/resources/fxml/InfosDomaine.fxml
+++ b/src/main/resources/fxml/InfosDomaine.fxml
@@ -45,13 +45,13 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label styleClass="lEmphase" text="Nom" GridPane.halignment="RIGHT" />
-                        <Label styleClass="lEmphase" text="Domaine" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                        <Label styleClass="lBold" text="Nom" GridPane.halignment="RIGHT" />
+                        <Label styleClass="lBold" text="Domaine" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                         <TextField fx:id="tfNom" promptText="Nom du domaine [2 &lt;= longueur &lt;= 18]" GridPane.columnIndex="1" />
                         <TextField fx:id="tfDomaine" promptText="Domaine (adresse)" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <TextField fx:id="tfCategorie" promptText="Catégorie" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <TextArea fx:id="taNotes" prefHeight="200.0" prefWidth="200.0" promptText="(Optionnel) Notes à propos du domaine" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-                        <Label styleClass="lEmphase" text="Notes" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <Label styleClass="lBold" text="Notes" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                         <BorderPane GridPane.columnIndex="3" GridPane.rowSpan="3">
                            <center>
                               <ImageView fx:id="ivIcone" fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" />
@@ -65,7 +65,7 @@
                               </VBox>
                            </right>
                            <top>
-                              <Label styleClass="lEmphase" text="Icone" BorderPane.alignment="CENTER" />
+                              <Label styleClass="lBold" text="Icone" BorderPane.alignment="CENTER" />
                            </top>
                         </BorderPane>
                         <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -81,7 +81,7 @@
                            </children>
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" />
-                        <Label styleClass="lEmphase" text="Catégorie" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                        <Label styleClass="lBold" text="Catégorie" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
                      </children>
                      <BorderPane.margin>
                         <Insets bottom="10.0" top="10.0" />
@@ -102,14 +102,14 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label fx:id="nomLabel" styleClass="titre" text="Label">
+                        <Label fx:id="nomLabel" styleClass="lTitre" text="Label">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="domaineLabel" text="Label" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                        <Label fx:id="domaineLabel" styleClass="lItalic" text="Label" GridPane.columnSpan="2" GridPane.rowIndex="1">
                            <font>
-                              <Font name="System Italic" size="14.0" />
+                              <Font size="14.0" />
                            </font>
                            <GridPane.margin>
                               <Insets left="25.0" />
