--- a/src/main/resources/fxml/App.fxml
+++ b/src/main/resources/fxml/App.fxml
@@ -36,7 +36,7 @@
                         <MenuItem fx:id="miOuvrir" mnemonicParsing="false" onAction="#chargerDialog" text="Ouvrir" />
                         <MenuItem fx:id="miSauvegarder" mnemonicParsing="false" onAction="#sauvegarderSc" text="Sauvegarder" />
                         <MenuItem fx:id="miSauvegarderVers" mnemonicParsing="false" onAction="#sauvegarderDialog" text="Sauvegarder vers..." />
-                        <MenuItem fx:id="miFermer" mnemonicParsing="false" text="Fermer" />
+                        <MenuItem fx:id="miFermer" mnemonicParsing="false" onAction="#fermer" text="Fermer" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem fx:id="miAutoriser" mnemonicParsing="false" onAction="#autoriser" text="Autoriser" />
                         <MenuItem fx:id="miInformations" mnemonicParsing="false" onAction="#modifierFichierInfo" text="Informations" />
@@ -53,6 +53,7 @@
                         <MenuItem fx:id="miAjouter" mnemonicParsing="false" onAction="#ajouterAuFocus" text="Ajouter" />
                         <MenuItem fx:id="miModifier" mnemonicParsing="false" onAction="#modifierAuFocus" text="Modifier" />
                     <MenuItem fx:id="miSupprimer" mnemonicParsing="false" onAction="#supprimerAuFocus" text="Supprimer" />
+                        <MenuItem fx:id="miDupliquer" mnemonicParsing="false" onAction="#dupliquerAuFocus" text="Dupliquer" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem fx:id="miParametres" mnemonicParsing="false" onAction="#montrerParametres" text="Paramètres" />
                   </items>
@@ -82,31 +83,31 @@
                                  <content>
                                     <ListView id="lvSelection" fx:id="lvDomaines" prefHeight="306.0" prefWidth="178.0" />
                                  </content>
-                                 <padding>
-                                    <Insets bottom="-1.0" left="-1.0" right="-1.0" top="-1.0" />
-                                 </padding>
                               </ScrollPane>
                            </center>
                            <bottom>
-                              <HBox BorderPane.alignment="CENTER">
-                                 <children>
-                                    <TextField id="tfSelectionFiltre" fx:id="tfFiltre" promptText="Rechercher..." HBox.hgrow="ALWAYS">
-                                       <HBox.margin>
+                              <BorderPane BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets />
+                                 </BorderPane.margin>
+                                 <center>
+                                    <TextField id="tfSelectionFiltre" fx:id="tfFiltre" promptText="Rechercher...">
+                                       <BorderPane.margin>
                                           <Insets />
-                                       </HBox.margin></TextField>
-                                    <Button fx:id="bEcraserFiltre" mnemonicParsing="false" onAction="#ecraserFiltre" styleClass="bSelectionAction" text="X" />
-                                 </children>
-                                 <padding>
-                                    <Insets bottom="-1.0" left="-1.0" right="-1.0" />
-                                 </padding>
-                              </HBox>
+                                       </BorderPane.margin>
+                                    </TextField>
+                                 </center>
+                                 <right>
+                                    <Button id="bSelectionFiltre" fx:id="bEcraserFiltre" mnemonicParsing="false" onAction="#ecraserFiltre" styleClass="bSelectionFiltre" text="X" BorderPane.alignment="CENTER" />
+                                 </right>
+                              </BorderPane>
                            </bottom>
                            <top>
                               <BorderPane BorderPane.alignment="CENTER">
                                  <left>
                                     <HBox BorderPane.alignment="CENTER">
                                        <children>
-                                          <Button fx:id="bMonterDomaineMax" mnemonicParsing="false" onAction="#monterDomaineMax" styleClass="bSelectionAction" text="DU" />
+                                          <Button fx:id="bMonterDomaineMax" mnemonicParsing="false" onAction="#monterDomaineMax" styleClass="bSelectionActionFirst" text="DU" />
                                           <Button fx:id="bMonterDomaine" mnemonicParsing="false" onAction="#monterDomaine" styleClass="bSelectionAction" text="U" />
                                           <Button fx:id="bDescendreDomaine" mnemonicParsing="false" onAction="#descendreDomaine" styleClass="bSelectionAction" text="D" />
                                           <Button fx:id="bDescendreDomaineMax" mnemonicParsing="false" onAction="#descendreDomaineMax" styleClass="bSelectionAction" text="DD" />
@@ -116,7 +117,7 @@
                                  <right>
                                     <HBox BorderPane.alignment="CENTER">
                                        <children>
-                                          <Button fx:id="bAjoutDomaine" mnemonicParsing="false" onAction="#ajoutDomaine" styleClass="bSelectionAction" text="+" />
+                                          <Button fx:id="bAjoutDomaine" mnemonicParsing="false" onAction="#ajoutDomaine" styleClass="bSelectionActionFirst" text="+" />
                                           <Button fx:id="bModificationDomaine" mnemonicParsing="false" onAction="#modificationDomaine" styleClass="bSelectionAction" text="*" />
                                           <Button fx:id="bSuppressionDomaine" mnemonicParsing="false" onAction="#suppressionDomaine" styleClass="bSelectionAction" text="-" />
                                        </children>
@@ -124,9 +125,6 @@
                                  </right>
                               </BorderPane>
                            </top>
-                           <padding>
-                              <Insets bottom="-1.0" />
-                           </padding>
                         </BorderPane>
                       <AnchorPane fx:id="detailsRoot" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
@@ -151,56 +149,67 @@
                                  <center>
                                     <VBox spacing="10.0" BorderPane.alignment="CENTER">
                                        <children>
-                                          <GridPane>
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" />
-                                              <ColumnConstraints hgrow="ALWAYS" />
-                                                <ColumnConstraints hgrow="ALWAYS" minWidth="250.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
+                                          <HBox spacing="4.0">
                                              <children>
-                                                <Label text="Domaine" GridPane.valignment="TOP">
-                                                   <styleClass>
-                                                      <String fx:value="lBold" />
-                                                      <String fx:value="lDetailsIndication" />
-                                                   </styleClass></Label>
-                                                <Label text="Nombre de comptes" GridPane.rowIndex="2" GridPane.valignment="TOP">
-                                                   <styleClass>
-                                                      <String fx:value="lBold" />
-                                                      <String fx:value="lDetailsIndication" />
-                                                   </styleClass></Label>
-                                                <Label fx:id="lDetailsDomaine" text="Bla" GridPane.columnIndex="1" GridPane.valignment="TOP" />
-                                                <Label fx:id="lDetailsComptesTaille" text="Bla" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-                                                <Label text="Notes" GridPane.columnIndex="2" GridPane.valignment="TOP">
-                                                   <styleClass>
-                                                      <String fx:value="lBold" />
-                                                      <String fx:value="lDetailsIndication" />
-                                                   </styleClass></Label>
-                                                <ScrollPane maxHeight="200.0" minHeight="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.valignment="TOP">
-                                                   <content>
-                                                      <Label fx:id="lDetailsNotes" text="Bla" />
-                                                   </content>
-                                                </ScrollPane>
-                                                <Label text="Catégorie" GridPane.rowIndex="1" GridPane.valignment="TOP">
-                                                   <styleClass>
-                                                      <String fx:value="lBold" />
-                                                      <String fx:value="lDetailsIndication" />
-                                                   </styleClass></Label>
-                                                <Label fx:id="lDetailsCategorie" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                                                <GridPane hgap="5.0" vgap="5.0">
+                                                   <columnConstraints>
+                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                                      <ColumnConstraints prefWidth="150.0" />
+                                                   </columnConstraints>
+                                                   <rowConstraints>
+                                                      <RowConstraints vgrow="NEVER" />
+                                                      <RowConstraints vgrow="NEVER" />
+                                                      <RowConstraints vgrow="NEVER" />
+                                                   </rowConstraints>
+                                                   <children>
+                                                      <Label text="Domaine" GridPane.valignment="TOP">
+                                                         <styleClass>
+                                                            <String fx:value="lBold" />
+                                                            <String fx:value="lDetailsIndication" />
+                                                         </styleClass>
+                                                      </Label>
+                                                      <Label fx:id="lDetailsDomaine" text="Bla" GridPane.columnIndex="1" GridPane.valignment="TOP" />
+                                                      <Label text="Catégorie" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                                                         <styleClass>
+                                                            <String fx:value="lBold" />
+                                                            <String fx:value="lDetailsIndication" />
+                                                         </styleClass>
+                                                      </Label>
+                                                      <Label fx:id="lDetailsCategorie" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                                                      <Label text="Nombre de comptes" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                                                         <styleClass>
+                                                            <String fx:value="lBold" />
+                                                            <String fx:value="lDetailsIndication" />
+                                                         </styleClass>
+                                                      </Label>
+                                                      <Label fx:id="lDetailsComptesTaille" text="Bla" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+                                                   </children>
+                                                </GridPane>
+                                                <VBox spacing="5.0" HBox.hgrow="ALWAYS">
+                                                   <children>
+                                                      <Label text="Notes">
+                                                         <styleClass>
+                                                            <String fx:value="lBold" />
+                                                            <String fx:value="lDetailsIndication" />
+                                                         </styleClass>
+                                                      </Label>
+                                                      <ScrollPane id="spDetailsNotes">
+                                                         <content>
+                                                            <Label fx:id="lDetailsNotes" text="Bla" />
+                                                         </content>
+                                                      </ScrollPane>
+                                                   </children>
+                                                </VBox>
                                              </children>
-                                          </GridPane>
+                                          </HBox>
                                           <HBox VBox.vgrow="ALWAYS">
                                              <children>
                                                 <TableView id="tvDetails" fx:id="tvComptes" prefHeight="212.0" prefWidth="501.0" HBox.hgrow="ALWAYS">
                                                   <columns>
-                                                      <TableColumn id="tcDetailsColumnNumber" fx:id="tvComptesNumero" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" resizable="false" text="#" />
-                                                    <TableColumn id="tcDetailsColumnUtilisateur" fx:id="tvComptesUtilisateur" prefWidth="280.0" text="Utilisateur" />
-                                                    <TableColumn id="tcDetailsColumnMotDePasse" fx:id="tvComptesMotDePasse" prefWidth="75.0" text="Mot de passe" />
-                                                      <TableColumn id="tcDetailsColumnDateCreation" fx:id="tvComptesDateCreation" prefWidth="75.0" text="Date de création" />
+                                                      <TableColumn id="tcDetailsColumnNumber" fx:id="tvComptesNumero" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" resizable="false" sortable="false" text="#" />
+                                                    <TableColumn id="tcDetailsColumnUtilisateur" fx:id="tvComptesUtilisateur" editable="false" prefWidth="280.0" text="Utilisateur" />
+                                                    <TableColumn id="tcDetailsColumnMotDePasse" fx:id="tvComptesMotDePasse" editable="false" prefWidth="75.0" text="Mot de passe" />
+                                                      <TableColumn id="tcDetailsColumnDateCreation" fx:id="tvComptesDateCreation" editable="false" prefWidth="75.0" text="Date de création" />
                                                   </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -210,7 +219,7 @@
                                                    <top>
                                                       <VBox BorderPane.alignment="CENTER">
                                                          <children>
-                                                            <Button fx:id="bMonterCompteMax" mnemonicParsing="false" onAction="#monterCompteMax" prefWidth="1000.0" styleClass="bDetailsAction" text="DU" />
+                                                            <Button fx:id="bMonterCompteMax" mnemonicParsing="false" onAction="#monterCompteMax" prefWidth="1000.0" styleClass="bDetailsActionFirst" text="DU" />
                                                             <Button fx:id="bMonterCompte" mnemonicParsing="false" onAction="#monterCompte" prefWidth="1000.0" styleClass="bDetailsAction" text="U" />
                                                             <Button fx:id="bDescendreCompte" mnemonicParsing="false" onAction="#descendreCompte" prefWidth="1000.0" styleClass="bDetailsAction" text="D" />
                                                             <Button fx:id="bDescendreCompteMax" mnemonicParsing="false" onAction="#descendreCompteMax" prefWidth="1000.0" styleClass="bDetailsAction" text="DD" />
@@ -220,7 +229,7 @@
                                                    <bottom>
                                                       <VBox BorderPane.alignment="CENTER">
                                                          <children>
-                                                            <Button fx:id="bAjoutCompte" mnemonicParsing="false" onAction="#ajoutCompte" prefWidth="1000.0" styleClass="bDetailsAction" text="+" />
+                                                            <Button fx:id="bAjoutCompte" mnemonicParsing="false" onAction="#ajoutCompte" prefWidth="1000.0" styleClass="bDetailsActionFirst" text="+" />
                                                             <Button fx:id="bModificationCompte" mnemonicParsing="false" onAction="#modificationCompte" prefWidth="1000.0" styleClass="bDetailsAction" text="*" />
                                                             <Button fx:id="bSuppressionCompte" mnemonicParsing="false" onAction="#suppressionCompte" prefWidth="1000.0" styleClass="bDetailsAction" text="-" />
                                                          </children>
